# service/modbustohttp/v1alpha1/types.pb.go
@@ -1,0 +1,195 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.8
+// 	protoc        (unknown)
+// source: modbustohttp/v1alpha1/types.proto
+
+package v1alpha1
+
+import (
+	_ "buf.build/gen/go/bufbuild/protovalidate/protocolbuffers/go/buf/validate"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type BooleanAddress struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// The address of the coil or discrete input
+	Address uint32 `protobuf:"varint,1,opt,name=address,proto3" json:"address,omitempty"`
+	// The value of the coil or discrete input
+	Value         bool `protobuf:"varint,2,opt,name=value,proto3" json:"value,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *BooleanAddress) Reset() {
+	*x = BooleanAddress{}
+	mi := &file_modbustohttp_v1alpha1_types_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *BooleanAddress) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*BooleanAddress) ProtoMessage() {}
+
+func (x *BooleanAddress) ProtoReflect() protoreflect.Message {
+	mi := &file_modbustohttp_v1alpha1_types_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use BooleanAddress.ProtoReflect.Descriptor instead.
+func (*BooleanAddress) Descriptor() ([]byte, []int) {
+	return file_modbustohttp_v1alpha1_types_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *BooleanAddress) GetAddress() uint32 {
+	if x != nil {
+		return x.Address
+	}
+	return 0
+}
+
+func (x *BooleanAddress) GetValue() bool {
+	if x != nil {
+		return x.Value
+	}
+	return false
+}
+
+// A modbus register value
+type Register struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// The address of the register
+	Address uint32 `protobuf:"varint,1,opt,name=address,proto3" json:"address,omitempty"`
+	// The value of the register
+	Value         uint32 `protobuf:"varint,2,opt,name=value,proto3" json:"value,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *Register) Reset() {
+	*x = Register{}
+	mi := &file_modbustohttp_v1alpha1_types_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Register) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Register) ProtoMessage() {}
+
+func (x *Register) ProtoReflect() protoreflect.Message {
+	mi := &file_modbustohttp_v1alpha1_types_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Register.ProtoReflect.Descriptor instead.
+func (*Register) Descriptor() ([]byte, []int) {
+	return file_modbustohttp_v1alpha1_types_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *Register) GetAddress() uint32 {
+	if x != nil {
+		return x.Address
+	}
+	return 0
+}
+
+func (x *Register) GetValue() uint32 {
+	if x != nil {
+		return x.Value
+	}
+	return 0
+}
+
+var File_modbustohttp_v1alpha1_types_proto protoreflect.FileDescriptor
+
+const file_modbustohttp_v1alpha1_types_proto_rawDesc = "" +
+	"\n" +
+	"!modbustohttp/v1alpha1/types.proto\x12\x15modbustohttp.v1alpha1\x1a\x1bbuf/validate/validate.proto\"M\n" +
+	"\x0eBooleanAddress\x12%\n" +
+	"\aaddress\x18\x01 \x01(\rB\v\xbaH\b*\x06\x18\xff\xff\x03(\x00R\aaddress\x12\x14\n" +
+	"\x05value\x18\x02 \x01(\bR\x05value\"R\n" +
+	"\bRegister\x12#\n" +
+	"\aaddress\x18\x01 \x01(\rB\t\xbaH\x06*\x04\x18\xff\xff\x03R\aaddress\x12!\n" +
+	"\x05value\x18\x02 \x01(\rB\v\xbaH\b*\x06\x18\xff\xff\x03(\x00R\x05valueB\xc8\x01\n" +
+	"\x19com.modbustohttp.v1alpha1B\n" +
+	"TypesProtoP\x01Z*modbustohttp/service/modbustohttp/v1alpha1\xa2\x02\x03MXX\xaa\x02\x15Modbustohttp.V1alpha1\xca\x02\x15Modbustohttp\\V1alpha1\xe2\x02!Modbustohttp\\V1alpha1\\GPBMetadata\xea\x02\x16Modbustohttp::V1alpha1b\x06proto3"
+
+var (
+	file_modbustohttp_v1alpha1_types_proto_rawDescOnce sync.Once
+	file_modbustohttp_v1alpha1_types_proto_rawDescData []byte
+)
+
+func file_modbustohttp_v1alpha1_types_proto_rawDescGZIP() []byte {
+	file_modbustohttp_v1alpha1_types_proto_rawDescOnce.Do(func() {
+		file_modbustohttp_v1alpha1_types_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_modbustohttp_v1alpha1_types_proto_rawDesc), len(file_modbustohttp_v1alpha1_types_proto_rawDesc)))
+	})
+	return file_modbustohttp_v1alpha1_types_proto_rawDescData
+}
+
+var file_modbustohttp_v1alpha1_types_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_modbustohttp_v1alpha1_types_proto_goTypes = []any{
+	(*BooleanAddress)(nil), // 0: modbustohttp.v1alpha1.BooleanAddress
+	(*Register)(nil),       // 1: modbustohttp.v1alpha1.Register
+}
+var file_modbustohttp_v1alpha1_types_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_modbustohttp_v1alpha1_types_proto_init() }
+func file_modbustohttp_v1alpha1_types_proto_init() {
+	if File_modbustohttp_v1alpha1_types_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_modbustohttp_v1alpha1_types_proto_rawDesc), len(file_modbustohttp_v1alpha1_types_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_modbustohttp_v1alpha1_types_proto_goTypes,
+		DependencyIndexes: file_modbustohttp_v1alpha1_types_proto_depIdxs,
+		MessageInfos:      file_modbustohttp_v1alpha1_types_proto_msgTypes,
+	}.Build()
+	File_modbustohttp_v1alpha1_types_proto = out.File
+	file_modbustohttp_v1alpha1_types_proto_goTypes = nil
+	file_modbustohttp_v1alpha1_types_proto_depIdxs = nil
+}
