# specs/openapi/modbustohttp.yaml
@@ -1,7 +1,5 @@
 openapi: 3.1.0
-info:
-  title: modbustohttp.v1alpha1
-  version: v1alpha1
+info: {}
 paths:
   /modbustohttp.v1alpha1.ModbusService/ReadHoldingRegisters:
     get:
@@ -531,13 +529,47 @@ components:
           type: integer
           title: address
           maximum: 65535
-          description: The address of the coil or discrete input
+          minimum: 0
+          description: |
+            The address of the coil or discrete input
+            uint32.gte = 0
+            uint32.gte_lt = 0
+            uint32.gte_lt_exclusive = 0
+            uint32.gte_lte = 0
+            uint32.gte_lte_exclusive = 0
+            uint32.lte = 65535
         value:
           type: boolean
           title: value
           description: The value of the coil or discrete input
       title: BooleanAddress
       additionalProperties: false
+    modbustohttp.v1alpha1.Register:
+      type: object
+      properties:
+        address:
+          type: integer
+          title: address
+          maximum: 65535
+          description: |
+            The address of the register
+            uint32.lte = 65535
+        value:
+          type: integer
+          title: value
+          maximum: 65535
+          minimum: 0
+          description: |
+            The value of the register
+            uint32.gte = 0
+            uint32.gte_lt = 0
+            uint32.gte_lt_exclusive = 0
+            uint32.gte_lte = 0
+            uint32.gte_lte_exclusive = 0
+            uint32.lte = 65535
+      title: Register
+      additionalProperties: false
+      description: A modbus register value
     modbustohttp.v1alpha1.ReadCoilsRequest:
       type: object
       properties:
@@ -545,21 +577,32 @@ components:
           type: integer
           title: address
           maximum: 65535
-          description: The address to start reading from
+          minimum: 0
+          description: |
+            The address to start reading from
+            uint32.gte = 0
+            uint32.gte_lt = 0
+            uint32.gte_lt_exclusive = 0
+            uint32.gte_lte = 0
+            uint32.gte_lte_exclusive = 0
+            uint32.lte = 65535
         quantity:
           type: integer
           title: quantity
           maximum: 2000
           minimum: 1
-          description: The quantity of registers to read starting from address
+          description: |
+            The quantity of registers to read starting from address
+            uint32.gte = 1
+            uint32.gte_lt = 1
+            uint32.gte_lt_exclusive = 1
+            uint32.gte_lte = 1
+            uint32.gte_lte_exclusive = 1
+            uint32.lte = 2000
       title: ReadCoilsRequest
       additionalProperties: false
-      description: |+
-        address + quantity must not be greater than 65536:
-        ```
-        this.address + this.quantity <= 65536
-        ```
-
+      description: |
+        not.out.of.range // address + quantity must not be greater than 65536
     modbustohttp.v1alpha1.ReadCoilsResponse:
       type: object
       properties:
@@ -579,21 +622,32 @@ components:
           type: integer
           title: address
           maximum: 65535
-          description: The address to start reading from
+          minimum: 0
+          description: |
+            The address to start reading from
+            uint32.gte = 0
+            uint32.gte_lt = 0
+            uint32.gte_lt_exclusive = 0
+            uint32.gte_lte = 0
+            uint32.gte_lte_exclusive = 0
+            uint32.lte = 65535
         quantity:
           type: integer
           title: quantity
           maximum: 2000
           minimum: 1
-          description: The quantity of registers to read starting from address
+          description: |
+            The quantity of registers to read starting from address
+            uint32.gte = 1
+            uint32.gte_lt = 1
+            uint32.gte_lt_exclusive = 1
+            uint32.gte_lte = 1
+            uint32.gte_lte_exclusive = 1
+            uint32.lte = 2000
       title: ReadDiscreteInputsRequest
       additionalProperties: false
-      description: |+
-        address + quantity must not be greater than 65536:
-        ```
-        this.address + this.quantity <= 65536
-        ```
-
+      description: |
+        not.out.of.range // address + quantity must not be greater than 65536
     modbustohttp.v1alpha1.ReadDiscreteInputsResponse:
       type: object
       properties:
@@ -613,22 +667,27 @@ components:
           type: integer
           title: address
           maximum: 65535
-          description: The address start start reading from
+          description: |
+            The address start start reading from
+            uint32.lte = 65535
         quantity:
           exclusiveMinimum: 0
           type: integer
           title: quantity
           maximum: 125
-          description: The quantity of registers to read start from address
+          description: |
+            The quantity of registers to read start from address
+            uint32.gt = 0
+            uint32.gt_lt = 0
+            uint32.gt_lt_exclusive = 0
+            uint32.gt_lte = 0
+            uint32.gt_lte_exclusive = 0
+            uint32.lte = 125
           nullable: true
       title: ReadHoldingRegistersRequest
       additionalProperties: false
-      description: |+
-        address + quantity must not be greater than 65536:
-        ```
-        this.address + this.quantity <= 65536
-        ```
-
+      description: |
+        not.out.of.range // address + quantity must not be greater than 65536
     modbustohttp.v1alpha1.ReadHoldingRegistersResponse:
       type: object
       properties:
@@ -649,22 +708,27 @@ components:
           type: integer
           title: address
           maximum: 65535
-          description: The address start start reading from
+          description: |
+            The address start start reading from
+            uint32.lte = 65535
         quantity:
           exclusiveMinimum: 0
           type: integer
           title: quantity
           maximum: 125
-          description: The quantity of registers to read start from address
+          description: |
+            The quantity of registers to read start from address
+            uint32.gt = 0
+            uint32.gt_lt = 0
+            uint32.gt_lt_exclusive = 0
+            uint32.gt_lte = 0
+            uint32.gt_lte_exclusive = 0
+            uint32.lte = 125
           nullable: true
       title: ReadInputRegistersRequest
       additionalProperties: false
-      description: |+
-        address + quantity must not be greater than 65536:
-        ```
-        this.address + this.quantity <= 65536
-        ```
-
+      description: |
+        not.out.of.range // address + quantity must not be greater than 65536
     modbustohttp.v1alpha1.ReadInputRegistersResponse:
       type: object
       properties:
@@ -678,22 +742,6 @@ components:
           description: The values of the registers read
       title: ReadInputRegistersResponse
       additionalProperties: false
-    modbustohttp.v1alpha1.Register:
-      type: object
-      properties:
-        address:
-          type: integer
-          title: address
-          maximum: 65535
-          description: The address of the register
-        value:
-          type: integer
-          title: value
-          maximum: 65535
-          description: The value of the register
-      title: Register
-      additionalProperties: false
-      description: A modbus register value
     modbustohttp.v1alpha1.WriteBitInRegisterRequest:
       type: object
       properties:
@@ -701,12 +749,22 @@ components:
           type: integer
           title: address
           maximum: 65535
-          description: The address of the register
+          description: |
+            The address of the register
+            uint32.lte = 65535
         bit:
           type: integer
           title: bit
           maximum: 15
-          description: The bit to write in the register (0-15)
+          minimum: 0
+          description: |
+            The bit to write in the register (0-15)
+            uint32.gte = 0
+            uint32.gte_lt = 0
+            uint32.gte_lt_exclusive = 0
+            uint32.gte_lte = 0
+            uint32.gte_lte_exclusive = 0
+            uint32.lte = 15
         value:
           type: boolean
           title: value
@@ -728,6 +786,14 @@ components:
           type: integer
           title: address
           maximum: 65535
+          minimum: 0
+          description: |
+            uint32.gte = 0
+            uint32.gte_lt = 0
+            uint32.gte_lt_exclusive = 0
+            uint32.gte_lte = 0
+            uint32.gte_lte_exclusive = 0
+            uint32.lte = 65535
         values:
           type: array
           items:
@@ -735,12 +801,8 @@ components:
           title: values
       title: WriteMultipleCoilsRequest
       additionalProperties: false
-      description: |+
-        address + length of values must not be greater than 65536:
-        ```
-        this.address + uint(this.values.size()) <= 65536
-        ```
-
+      description: |
+        not.out.of.range // address + length of values must not be greater than 65536
     modbustohttp.v1alpha1.WriteMultipleCoilsResponse:
       type: object
       title: WriteMultipleCoilsResponse
@@ -752,6 +814,8 @@ components:
           type: integer
           title: address
           maximum: 65535
+          description: |
+            uint32.lte = 65535
         values:
           type: array
           items:
@@ -763,12 +827,8 @@ components:
           minItems: 1
       title: WriteMultipleRegistersRequest
       additionalProperties: false
-      description: |+
-        address + length of values must not be greater than 65536:
-        ```
-        this.address + uint(this.values.size()) <= 65536
-        ```
-
+      description: |
+        not.out.of.range // address + length of values must not be greater than 65536
     modbustohttp.v1alpha1.WriteMultipleRegistersResponse:
       type: object
       title: WriteMultipleRegistersResponse
@@ -859,24 +919,36 @@ components:
         message:
           type: string
           description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
-        detail:
-          $ref: '#/components/schemas/google.protobuf.Any'
+        details:
+          type: array
+          items:
+            $ref: '#/components/schemas/connect.error_details.Any'
+          description: A list of messages that carry the error details. There is no limit on the number of messages.
       title: Connect Error
       additionalProperties: true
       description: 'Error type returned by Connect: https://connectrpc.com/docs/go/errors/#http-representation'
-    google.protobuf.Any:
+    connect.error_details.Any:
       type: object
       properties:
         type:
           type: string
+          description: 'A URL that acts as a globally unique identifier for the type of the serialized message. For example: `type.googleapis.com/google.rpc.ErrorInfo`. This is used to determine the schema of the data in the `value` field and is the discriminator for the `debug` field.'
         value:
           type: string
           format: binary
+          description: The Protobuf message, serialized as bytes and base64-encoded. The specific message type is identified by the `type` field.
         debug:
-          type: object
-          additionalProperties: true
+          oneOf:
+            - type: object
+              title: Any
+              additionalProperties: true
+              description: Detailed error information.
+          discriminator:
+            propertyName: type
+          title: Debug
+          description: Deserialized error detail payload. The 'type' field indicates the schema. This field is for easier debugging and should not be relied upon for application logic.
       additionalProperties: true
-      description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+      description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message, with an additional debug field for ConnectRPC error details.
 security: []
 tags:
   - name: modbustohttp.v1alpha1.ModbusService
